appId: com.example.sheet_scanner
---
- launchApp
- assertVisible: "Add Sheet Music"
- tapOn: "Add Sheet Music"
- assertVisible: "Title"
- takeScreenshot: AddSheetPage
